Closed Bug 90173 Opened 24 years ago Closed 24 years ago

Focus events not being sent to Shockwave

Categories

(Core Graveyard :: Plug-ins, defect, P1)

PowerPC
Mac System 9.x
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.3

People

(Reporter: shrir, Assigned: peterlubczynski-bugs)

References

()

Details

(Keywords: regression, Whiteboard: [PDT+])

Attachments

(1 file)

mac branch build 0710 this seems to have regressed due to last night's checkin... Keyboard events are not getting registered... try faceball under games|sports... blocks all games that involve keyboard interaction..
I think this is a regression, I'll try to get a patch made up right away.
Status: NEW → ASSIGNED
Keywords: regression
Priority: -- → P1
Target Milestone: --- → mozilla0.9.3
Mark PDT+ to get on radar. This seems like a stop ship for plugins.
Hardware: PC → Macintosh
Whiteboard: [PDT+]
Rephrasing summary. Without focus events being sent to Shockwave, key events won't work. Shrirang, just to be clear on the old summary, keyboard do work on other plugins on Mac like Flash, right? For example, at http://www.emailtrack.com
Summary: keyboard events are not working on mac → Focus events not being sent to Shockwave
Whiteboard: [PDT+] → [PDT+][ETA Wednesday]
yep,that's right
Andrei, can you review this patch? It seems to fix it for the Mac. For some reason, a focus event isn't a nsGUIEvent. This was making OS X crash. It doesn't matter because all we care about is that it's a focus event and then we do something special with that in ProccessEvent(). The memset() ensures we don't crash doing any casts later as we have checks for null.
Whiteboard: [PDT+][ETA Wednesday] → [PDT+][ETA Wednesday][seeking reviews]
OK, r=av
OK, as long as you are sure that memset on the structure is sufficient to initialize it to a safe state, sr=attinasi
Patch is in the branch. I'll guess I'll get the trunk tomorrow when it opens. /cvsroot/mozilla/layout/html/base/src/nsObjectFrame.cpp,v new revision: 1.226.2.5; previous revision: 1.226.2.4
Whiteboard: [PDT+][ETA Wednesday][seeking reviews] → [PDT+][vbranch][patch in branch]
Patch in the trunk, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+][vbranch][patch in branch] → [PDT+][vbranch]
Thanks, pls verify when you get a chance, shrir. Thanks!
Whiteboard: [PDT+][vbranch] → [PDT+]
Shrir will be back on Wednesday.
verified this one on mac branch 0718. things look good , focus events are working now. Added 'vtrunk' for trunk verification later. marking VERIF
Status: RESOLVED → VERIFIED
Keywords: vtrunk
verif on mac trunk 0801, removing 'vtrunk'
Keywords: vtrunk
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: