Fix for Shockwave games not working bug 90173 r=av sr=attinasi